@@ -22,6 +22,8 @@
 
 * GafferUI.Frame has a borderStyle argument, defaulting to drawing a rather plain border.
 
+* OpDialogue now reports errors using a new ErrorDialogue class.
+
 0.9.0
 -----
 
